--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,17 @@
-/* You can add global styles to this file, and also import other style files */
+@import "src/assets/styles/reset";
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
+
+.html {
+  box-sizing: border-box;
+}
+
+*, *::before, *::after {
+  box-sizing: inherit;
+}
+
+.container {
+  max-width: 1000px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 30px
+}
