Сверстан блок с информацией

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,7 @@
   <div class="start-page">
     <app-start-page></app-start-page>
   </div>
+  <div class="start-page">
+    <app-information></app-information>
+  </div>
 </div>
