Начата верстка блока reviews

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,4 +8,7 @@
   <div class="start-page">
     <app-information></app-information>
   </div>
+  <div class="reviews">
+    <app-reviews></app-reviews>
+  </div>
 </div>
