верстка блока reviews

--- a/src/app/reviews/reviews.component.html
+++ b/src/app/reviews/reviews.component.html
@@ -7,7 +7,8 @@
       </div>
       <blockquote class="reviews__quote">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на
         привычные серые вещи! А еще я познакомился со своей будущей женой в
-        комментариях к выложенной фотографии!»</blockquote>
+        комментариях к выложенной фотографии!»
+      </blockquote>
       <h2 class="reviews__after-name">Николай Петров</h2>
       <p class="reviews__after-info">25 лет, водитель трамвая</p>
       <div class="reviews__next-button">
@@ -19,5 +20,51 @@
         <span class="reviews__back-line"></span>
       </div>
     </div>
+    <table class="reviews__table">
+      <thead>
+      <tr>
+        <th></th>
+        <th>
+          <div class="reviews__table-container">
+            <h2 class="reviews__table-title">База</h2>
+            <p class="reviews__table-text">1,99 USD</p>
+          </div>
+        </th>
+        <th>
+          <div class="reviews__table-container">
+            <h2 class="reviews__table-title">СТАНДАРТ</h2>
+            <p class="reviews__table-text">3,99 USD</p>
+          </div>
+        </th>
+        <th>
+          <div class="reviews__table-container">
+            <h2 class="reviews__table-title">АНЛИМ</h2>
+            <p class="reviews__table-text">9,99 USD</p>
+          </div>
+        </th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <td class="reviews__table-name">Розовый фильтр</td>
+        <td class="reviews__table-yes"></td>
+        <td class="reviews__table-yes"></td>
+        <td class="reviews__table-yes"></td>
+      </tr>
+      <tr>
+        <td class="reviews__table-name">Смайлики</td>
+        <td class="reviews__table-no"></td>
+        <td class="reviews__table-yes"></td>
+        <td class="reviews__table-yes"></td>
+      </tr>
+      <tr>
+        <td class="reviews__table-name">Комментарии</td>
+        <td class="reviews__table-no"></td>
+        <td class="reviews__table-no"></td>
+        <td class="reviews__table-yes"></td>
+      </tr>
+      </tbody>
+    </table>
+
   </div>
 </div>
