--- a/src/app/reviews/reviews.component.scss
+++ b/src/app/reviews/reviews.component.scss
@@ -3,7 +3,7 @@
     position: absolute;
     background: #F2F2F2;
     clip-path: polygon(0 55%, 100% 45%, 100% 100%, 0% 100%);
-    height: 1000px;
+    height: 1050px;
     width: 100%;
     left: 0;
     z-index: -1;
@@ -52,6 +52,7 @@
     line-height: 30px;
     text-align: center;
     color: #283645;
+    margin-bottom: 200px;
   }
 
   &__next-button {
@@ -61,6 +62,12 @@
     width: 22px;
     height: 40px;
     cursor: pointer;
+    opacity: 0.3;
+    transition: .1s all;
+    &:hover{
+      transform: scale(1.1);
+      opacity: 0.5;
+    }
   }
 
   &__next-line {
@@ -69,7 +76,6 @@
     left: 0;
     width: 100%;
     height: 1px;
-    opacity: 0.3;
     background: #283645;
     top: 50%;
 
@@ -91,6 +97,12 @@
     width: 22px;
     height: 40px;
     cursor: pointer;
+    opacity: 0.3;
+    transition: .1s all;
+    &:hover{
+      transform: scale(1.1);
+      opacity: 0.5;
+    }
   }
 
   &__back-line {
@@ -99,7 +111,6 @@
     left: 0;
     width: 100%;
     height: 1px;
-    opacity: 0.3;
     background: #283645;
     top: 50%;
 
@@ -113,4 +124,70 @@
       transform: rotate(45deg);
     }
   }
+
+  th:not(:first-child) {
+    width: 235px;
+    height: 95px;
+    background: #283645;
+    border: 2px solid #F2F2F2;;
+    border-radius: 1px 0px 0px 0px;
+
+    &:nth-child(3){
+      background: url("../../assets/image/hit-ribbon.png") no-repeat #283645;
+    }
+  }
+
+  td{
+    vertical-align: center;
+    padding: 23px 60px 23px 22px;
+    border: 2px solid #E5E5E5;
+    border-radius: 1px 0px 0px 0px;
+  }
+
+  &__table-container {
+    height: 95px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  &__table-title {
+    margin: 20px 0 0 0;
+    font-family: 'Open Sans', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 30px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #FFFFFF;
+  }
+
+  &__table-text {
+    font-family: 'Open Sans', sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 30px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #FFFFFF;
+  }
+  &__table-name{
+    color: #283645;
+    font-family: 'Open Sans',sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 30px;
+    background: #FFFFFF;
+  }
+ &__table-yes {
+    background: url("../../assets/image/yes.png") no-repeat center #FFFFFF;
+  }
+  &__table-no {
+    background: url("../../assets/image/no.png") no-repeat center #FFFFFF;
+  }
 }
+
+
