верстка блока контактов

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,4 +11,7 @@
   <div class="reviews">
     <app-reviews></app-reviews>
   </div>
+  <div class="reviews">
+    <app-contacts></app-contacts>
+  </div>
 </div>
