--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,10 @@
   <div class="reviews">
     <app-reviews></app-reviews>
   </div>
-  <div class="reviews">
+  <div class="contacts">
     <app-contacts></app-contacts>
+  </div>
+  <div class="footer">
+    <app-footer></app-footer>
   </div>
 </div>
