--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,3 +10,11 @@
   position: relative;
   width: 100%;
 }
+.contacts{
+  position: relative;
+  width: 100%;
+}
+.footer{
+  position: relative;
+  width: 100%;
+}
