--- a/src/app/information/information.component.html
+++ b/src/app/information/information.component.html
@@ -35,7 +35,29 @@
           <p class="information__phone-information">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями
             и заводите новых</p>
         </div>
+
       </div>
+      <div class="information__phones-mobile">
+        <div class="information__phone-image">
+          <img src="assets/image/phone-mobile.png" alt="">
+        </div>
+        <div class="information__phone-info">
+          <h2 class="information__phone-title">Поднимает
+            настроение</h2>
+          <p class="information__phone-information">Приложение позволит вам победить осеннюю хандру и депрессию
+            буквально в несколько кликов!</p>
+          <h2 class="information__phone-title">Меняет мир
+            вокруг</h2>
+          <p class="information__phone-information">Сделайте снимок и
+            украсьте его смайликом
+            или текстовой подписью, чтобы усилить эффект</p>
+          <h2 class="information__phone-title">Заводит
+            новых друзей</h2>
+          <p class="information__phone-information">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями
+            и заводите новых</p>
+        </div>
+      </div>
+
       <div class="information__diagram-container">
         <div class="information__diagram">
           <img src="assets/image/diagram.png" alt="">
