--- a/src/app/information/information.component.scss
+++ b/src/app/information/information.component.scss
@@ -51,6 +51,7 @@
     width: 300px;
     height: auto;
     margin-bottom: 60px;
+
   }
 
   &__phone-title {
@@ -72,6 +73,18 @@
     line-height: 30px;
     text-align: center;
     color: #283645;
+  }
+
+  &__phones-mobile {
+    display: none;
+  }
+
+  &__phone-info {
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
   }
 
   &__diagram-container {
@@ -122,5 +135,58 @@
     line-height: 30px;
     text-decoration-line: underline;
     color: #D22856;
+  }
+}
+
+@media screen and (max-width: 830px) {
+  .information {
+    &__background {
+      clip-path: polygon(0 50%, 100% 40%, 100% 100%, 0% 100%);
+      height: 710px;
+    }
+
+    &__title {
+      font-size: 40px;
+      line-height: 54px;
+    }
+
+    &__phones {
+      display: none;
+    }
+
+    &__phones-mobile {
+      display: flex;
+      gap: 40px;
+    }
+
+    &__phone-image {
+      margin-bottom: 0;
+    }
+
+    img {
+      max-width: 100%;
+      height: 100%;
+    }
+
+    &__phone-title {
+      margin-bottom: 10px;
+      font-size: 18px;
+      line-height: 24px;
+      text-align: start;
+    }
+
+    &__phone-information {
+      margin-bottom: 35px;
+      font-size: 14px;
+      line-height: 24px;
+      text-align: start;
+    }
+
+    &__diagram-container {
+      margin-top: 100px;
+    }
+    &__diagram{
+      min-width: 230px;
+    }
   }
 }
