--- a/src/app/start-page/start-page.component.html
+++ b/src/app/start-page/start-page.component.html
@@ -6,22 +6,46 @@
         <h1 class="start-page__info-title">Взгляните
           на жизнь
           иначе!</h1>
-        <button class="start-page__info-button">
-          <a href="" class="start-page__info-link">Скачать приложение</a>
-        </button>
-        <div class="start-page__info-icons">
-          <div>
-            <img src="../../assets/image/apple-logo.png" class="start-page__info-icon" alt="">
+        <div class="start-page__icons-container">
+          <button class="start-page__info-button">
+            <a href="" class="start-page__info-link">Скачать приложение</a>
+          </button>
+          <div class="start-page__info-icons">
+            <div>
+              <img src="../../assets/image/apple-logo.png" class="start-page__info-icon" alt="">
+            </div>
+            <div>
+              <img src="../../assets/image/android-logo.png" class="start-page__info-icon" alt="">
+            </div>
+            <div>
+              <img src="../../assets/image/microsoft-logo.png" class="start-page__info-icon" alt="">
+            </div>
           </div>
-          <div>
-            <img src="../../assets/image/android-logo.png" class="start-page__info-icon" alt="">
-          </div>
-          <div>
-            <img src="../../assets/image/microsoft-logo.png" class="start-page__info-icon" alt="">
-          </div>
+          <p class="start-page__info-text">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
         </div>
-        <p class="start-page__info-text">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
       </div>
+    </div>
+  </div>
+</div>
+
+<div class="info-mobile">
+  <div class="container">
+    <div class="start-page__icons-mobile">
+      <button class="start-page__info-button">
+        <a href="" class="start-page__info-link">Скачать приложение</a>
+      </button>
+      <div class="start-page__info-icons">
+        <div>
+          <img src="../../assets/image/apple-logo.png" class="start-page__info-icon" alt="">
+        </div>
+        <div>
+          <img src="../../assets/image/android-logo.png" class="start-page__info-icon" alt="">
+        </div>
+        <div>
+          <img src="../../assets/image/microsoft-logo.png" class="start-page__info-icon" alt="">
+        </div>
+      </div>
+      <p class="start-page__info-text">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
     </div>
   </div>
 </div>
