правка адаптивной верстки

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
   <div class="start-page">
     <app-start-page></app-start-page>
   </div>
-  <div class="start-page">
+  <div class="information">
     <app-information></app-information>
   </div>
   <div class="reviews">
