--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -25,3 +25,9 @@
     align-items: center;
   }
 }
+
+@media screen and (max-width: 620px){
+  .container-inner{
+    flex-direction:column;
+  }
+}
