--- a/src/app/reviews/reviews.component.scss
+++ b/src/app/reviews/reviews.component.scss
@@ -152,6 +152,18 @@
     }
   }
 
+  &__th-mobile {
+    width: 100%;
+    height: 95px;
+    background: #283645;
+    border: 2px solid #283645;
+    border-radius: 1px 0 0 0;
+
+    &_hit {
+      background: url("../../assets/image/hit-ribbon.png") no-repeat #283645;
+    }
+  }
+
   td {
     vertical-align: center;
     padding: 23px 60px 23px 22px;
@@ -160,6 +172,7 @@
   }
 
   &__table-container {
+    width: 100%;
     height: 95px;
     display: flex;
     flex-direction: column;
@@ -206,35 +219,71 @@
   &__table-no {
     background: url("../../assets/image/no.png") no-repeat center #FFFFFF;
   }
+
+  &__table-mobile {
+    width: 90%;
+    margin: 0 auto;
+  }
 }
-.swiper{
+
+.swiper {
   display: flex;
   flex-direction: column-reverse;
 }
-.swiper-pagination{
+
+.swiper-pagination {
   display: none;
   position: relative;
   margin-top: 20px;
 }
-.swiper-pagination-bullet{
+
+.swiper-pagination-bullet {
   background: #000;
 }
-@media  screen and (max-width: 830px){
-  .reviews{
-    &__background{
+
+@media screen and (max-width: 830px) {
+  .reviews {
+    &__background {
       height: 910px;
     }
-    &__quotes-img{
+
+    &__quotes-img {
       display: none;
     }
-    &__swiper-slide{
+
+    &__swiper-slide {
       margin-top: 100px;
     }
   }
-  .swiper-button-next, .swiper-button-prev{
+  .swiper-button-next, .swiper-button-prev {
     display: none;
   }
-  .swiper-pagination{
+  .swiper-pagination {
     display: block;
   }
+}
+
+@media screen and (max-width: 650px) {
+  .reviews {
+    &__table {
+      display: none;
+    }
+
+    &__swiper {
+      margin-bottom: 70px;
+    }
+
+    &__background {
+      clip-path: polygon(0 55%, 100% 50%, 100% 100%, 0% 100%);
+    }
+
+    &__table-yes {
+      background: url("../../assets/image/yes.png") no-repeat 90% #FFFFFF;
+    }
+
+    &__table-no {
+      background: url("../../assets/image/no.png") no-repeat 90% #FFFFFF;
+    }
+  }
+
 }
