Корректировка адаптивной верстки

--- a/src/app/reviews/reviews.component.scss
+++ b/src/app/reviews/reviews.component.scss
@@ -224,6 +224,9 @@
     width: 90%;
     margin: 0 auto;
   }
+  &__mobile{
+    display: none;
+  }
 }
 
 .swiper {
@@ -268,7 +271,9 @@
     &__table {
       display: none;
     }
-
+    &__mobile{
+      display: block;
+    }
     &__swiper {
       margin-bottom: 70px;
     }
