Фикс подгрузки png

--- a/src/app/start-page/start-page.component.html
+++ b/src/app/start-page/start-page.component.html
@@ -36,13 +36,13 @@
       </button>
       <div class="start-page__info-icons">
         <div>
-          <img src="../../assets/image/apple-logo.png" class="start-page__info-icon" alt="">
+          <img src="assets/image/apple-logo.png" class="start-page__info-icon" alt="">
         </div>
         <div>
-          <img src="../../assets/image/android-logo.png" class="start-page__info-icon" alt="">
+          <img src="assets/image/android-logo.png" class="start-page__info-icon" alt="">
         </div>
         <div>
-          <img src="../../assets/image/microsoft-logo.png" class="start-page__info-icon" alt="">
+          <img src="assets/image/microsoft-logo.png" class="start-page__info-icon" alt="">
         </div>
       </div>
       <p class="start-page__info-text">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
