--- a/src/app/mobile-menu/mobile-menu.component.html
+++ b/src/app/mobile-menu/mobile-menu.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="container-inner">
       <div class="mobile-menu__header">
-        <img class="mobile-menu__header-logo" src="../../assets/image/logotype-white-desktop.png" height="40"
+        <img class="mobile-menu__header-logo" src="assets/image/logotype-white-desktop.png" height="40"
              width="147"
              alt="">
       </div>
