замена иконок на svg

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,11 +2,11 @@
   <div class="container">
     <div class="container-inner">
       <div class="footer__logo">
-        <img src="assets/image/logotype-blue-desktop.png" alt="" height="40" width="147"/></div>
+        <img src="assets/image/logotype-blue-desktop.svg" alt="" height="40" width="147"/></div>
       <div class="footer__social">
-        <img src="assets/image/twitter.png" alt="" class="footer__social-icon">
-        <img src="assets/image/facebook.png" alt="" class="footer__social-icon">
-        <img src="assets/image/youtube.png" alt="" class="footer__social-icon">
+        <img src="assets/image/twitter.svg" alt="" class="footer__social-icon">
+        <img src="assets/image/facebook.svg" alt="" class="footer__social-icon">
+        <img src="assets/image/youtube.svg" alt="" class="footer__social-icon">
       </div>
       <div class="footer__development">
         <p class="footer__development-text">Разработано</p>
