--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="header">
   <div class="container">
     <div class="container-inner">
-      <img src="assets/image/logotype-white-desktop.png" height="40" width="147" class="header__logo" alt="">
+      <img src="assets/image/logotype-white-desktop.svg" height="40" width="147" class="header__logo" alt="">
       <nav class="header__navigation">
         <ul class="header__list">
           <li class="header__list-item">
@@ -22,5 +22,4 @@
   </div>
 </div>
 <app-mobile-menu class="mobile-menu">
-
 </app-mobile-menu>
